# nginx-ldap-proxy

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  index.html  install-nginx-debian.sh  pyproject.toml
app/: gunicorn.conf.py  ldapauth.py  requirements.txt  supervisord.conf
etc/nginx/: auth.tmpl  nginx.conf
etc/nginx/conf.d/: default.conf  default.tmpl
