[tool.poetry]
name = "nginx-ldap-proxy"
version = "0.1.0"
description = ""
authors = ["Joaquin Rodriguez <jrhuerta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
bonsai = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
